package com.champsoft.vrms.event.modules.event.domain.model;

public enum EventStatus {
    ACTIVE,
    CANCELLED,
    INACTIVE,
}
